fixing grayscale filter on mobile resolut.

--- a/src/index.css
+++ b/src/index.css
@@ -360,26 +360,12 @@ li {
   height: auto;
   align-items: center;
   filter: grayscale(100%);
-  transition: filter 0.5s ease;
 }
 
-.oldMunicipalities-img:hover {
-  filter: grayscale(0%);
+.oldMunicipalities-img:hover,
+.oldMunicipalities-img:focus {
+  filter: none;
 }
-
-/* switch off filter for mobile devices */
-/*
-@media (max-width: 768px) {
-  .oldMunicipalities-img {
-    filter: none;
-  }
-
-  .oldMunicipalities-img:hover {
-    filter: none;
-  }
-}
-
-*/
 
 .previous-municipalities-name {
   text-align: center;
